kubernetes/apps/minecraft/bedrock/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: minecraft-bedrock
  namespace: minecraft
spec:
  podSelector:
    matchLabels:
      app: minecraft-minecraft-bedrock-minecraft-bedrock
  policyTypes:
    - Egress
    - Ingress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to: # minecraft-auth
      - ipBlock:
          cidr: 0.0.0.0/0
          except:
          - "${HAPROXY_WHITELIST}"
      ports:
        - port: 443
          protocol: TCP
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kuma
          podSelector:
            matchLabels:
              app.kubernetes.io/controller: kuma
              app.kubernetes.io/instance: kuma-kuma
              app.kubernetes.io/name: kuma-kuma
      ports:
        - port: 19132
          protocol: UDP
